--- a/static/style.css
+++ b/static/style.css
@@ -1,57 +1,111 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap');
 
-header {
-    display: flex;
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
 }
-
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+    display: block;
+}
+body {
+    line-height: 1;
+}
+ol, ul {
+    list-style: none;
+}
+blockquote, q {
+    quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+    content: '';
+    content: none;
+}
+table {
+    border-collapse: collapse;
+    border-spacing: 0;
+}
+/* ------------------------------------------- */
 body{
     background-color: cornsilk;
 }
 
-.header_menu{
-    position: relative;
+header{
+    position: static;
     width: 100%;
-    height: 5%;
-    margin: 0px;
+    height: 10%;
+    
     background-color: rgb(254, 254, 254);
 }
 
 .menu{
-    position: relative;
+    /* border: 3px solid black; */
+
+    display:flex;
+    justify-content:center;
+    align-items: center;
+    gap: 10%;
+}
+
+.left_menu{
+    /* border: 3px solid black; */
+
     display: flex;
-    justify-content: space-between;
-    /* margin-top: 50px; */
-    margin: 50px;
-    margin-left: 210px;
-    /* margin-right: 150px; */
+    justify-content:center;
+    gap: 50%;
+}
+.right_menu{
+    /* border: 3px solid black; */
 
+    display: flex;
+    justify-content:center;
+    gap: 50%;
 }
 
-.menu_element_left{
-    margin-left: 100px;
-}
-.menu_element_right{
-    margin-right: 100px;
-}
 .menu_right_image{
+    /* border: 3px solid black; */
+
+    position: absolute;
+    display: flex;
     float: right;
-    margin-top: -10px;
+    right: 3%;
+    /* margin-top: -2%; */
 }
 .menu_image{
+    /* border: 3px solid black; */
+
     height: 50px;
-    margin-top: -10px;
+    margin: 2%;
+    /* margin-top: -10px; */
 }
-.menu_element{
+header a{
+    /* border: 3px solid black; */
+    
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 700;
     font-size: 16px;
-    line-height: 22px;
+    /* line-height: 22px; */
     color: rgba(54, 56, 56, 0.9033);
     text-decoration: none;
-    /* margin-left: 150px;
-    margin-right: 150px;
-    position: relative; */
 
 }
 
